# AI-PR-Review

./: .ai-pr-review.example.yaml  .ai-pr-review.yaml  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ai-review.yml  ci.yml
.trae/documents/: custom-expert-checklist-plan.md  incremental-analysis-plan.md  incremental-analysis-wrapup-plan.md  team-norm-learning-plan.md
src/ai_pr_review/: adversarial.py  aggregator.py  analyzer.py  api_server.py  cache.py  call_chain.py  cli.py  commenter.py  config.py  config_error.py  context_builder.py  dashboard.py  degradation.py  dependency_extractor.py  diff_parser.py  expert_knowledge.py  file_priority.py  formatter.py  github_client.py  history.py  impact_graph.py  incremental.py  knowledge_base.py  metrics.py  models.py  multi_agent.py  (+7 more)
tests/: test_adversarial.py  test_aggregator.py  test_analyzer.py  test_api_server.py  test_cache.py  test_call_chain.py  test_cli.py  test_cli_config.py  test_config_validation.py  test_dashboard.py  test_degradation.py  test_dependency_extractor.py  test_diff_parser.py  test_expert_customization.py  test_file_priority.py  test_formatter.py  test_github_client.py  test_history.py  test_impact_graph.py  test_incremental.py  test_inline_comments.py  test_knowledge_base.py  test_labels.py  test_large_pr_fixes.py  test_metrics.py  test_models.py  test_multi_agent.py  test_platform.py  test_project_config.py  test_rate_limiter.py  test_rich_format.py  test_shard.py  test_stream.py  test_structured_logging.py  test_team_learner.py  test_webhook.py
(+9 files in other folders)
