[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-pr-review"
version = "0.1.0"
description = "AI-powered Pull Request review assistant using domestic LLMs"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pygithub>=2.3.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
ai-pr-review = "ai_pr_review.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_pr_review"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
